--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 
         <label for="lastname">lastname:</label>
         <input type="text" id="lastname" name="lastname" required>
+
+        <label for="phonenumber">phonenumber:</label>
+        <input type="tel" id="phonenumber" name="phonenumber" placeholder="please enter your phonenumber" required>
     
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" required>
