--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required>
-        <button id="password-toggle" onclick="togglePasswordVisibility()">Show Password</button>
+        <button id="password-toggle"type="button" onclick="togglePasswordVisibility()">Show Password</button>
     
         <label for="confirm-password">Confirm Password:</label>
         <input type="password" id="confirm-password" name="confirm-password" required>
