--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="form.css">
 </head>
 <body>
-    <img src="yellow.jpg" alt="background">
+    <img src="/jpg/yellow.jpg"alt="" width="300" height="200">
     <div="container">
-        <h1>Sign Up</h1>
+        <h1>Sign up </h1>
         <form id="signup-form" action="process_signup.php" method="POST">
             <div class="input-container">
                 <label for="firstname">First Name:</label>
